[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "callmap"
version = "0.1.0"
description = "Visualize Python function call graphs as interactive HTML."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "networkx",
    "pyvis",
]

[project.scripts]
callmap = "callmap.cli:main"
graph = "callmap.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["callmap*"]
